correct overflow container

--- a/template/src/styl/styles.styl
+++ b/template/src/styl/styles.styl
@@ -63,6 +63,7 @@ header
 	height 75%
 	margin 0 auto
 	color dark
+	overflow-y auto
 	+media-query( all, max-width 640px )
 		width 100%
 		left 0
